--- a/index.html
+++ b/index.html
@@ -3,39 +3,26 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ديمو — تصفيات قلقيلية</title>
+  <title>تحويل — تصفيات قلقيلية</title>
+
+  <!-- Redirect فوري -->
+  <meta http-equiv="refresh" content="0; url=https://tasfiat-qalqilia.ps/ar" />
+
+  <script>
+    // بديل للـ meta refresh (أوضح للمتصفحات)
+    window.location.replace("https://tasfiat-qalqilia.ps/ar");
+  </script>
+
   <style>
-    body{font-family: system-ui, -apple-system, "Tajawal", Arial; margin:40px; line-height:1.8}
+    body{font-family: system-ui, -apple-system, "Tajawal", Arial; margin:40px; line-height:1.8; background:#0f1115; color:#fff}
     .box{max-width:820px;margin:auto;padding:24px;border:1px solid #333;border-radius:14px}
-    h1{margin:0 0 12px}
-    p{margin:0 0 10px;color:#ddd}
-    body{background:#0f1115;color:#fff}
-    code{background:#141824;padding:2px 6px;border-radius:6px}
+    a{color:#fe930e}
   </style>
 </head>
 <body>
   <div class="box">
-    <h1>ديمو نظام تشغيل محادثات — تصفيات قلقيلية</h1>
-    <p>جرّب اكتب مثلًا:</p>
-    <p><code>joma-tojs2401tf</code> أو <code>Skechers</code> أو سؤال شحن.</p>
-    <p>المحادثة تظهر في Chatwoot Inbox لتجربة الوسوم والتصعيد.</p>
+    <p>جارٍ تحويلك إلى الصفحة الرئيسية…</p>
+    <p>إذا لم يتم التحويل تلقائيًا: <a href="https://tasfiat-qalqilia.ps/ar">اضغط هنا</a></p>
   </div>
-
-  <!-- Chatwoot Widget -->
-  <script>
-    (function(d,t) {
-      var BASE_URL="https://app.chatwoot.com";
-      var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src=BASE_URL+"/packs/js/sdk.js";
-      g.async = true;
-      s.parentNode.insertBefore(g,s);
-      g.onload=function(){
-        window.chatwootSDK.run({
-          websiteToken: 'y6jKrCLsWXP2HPQk9ASvr7jT',
-          baseUrl: BASE_URL
-        })
-      }
-    })(document,"script");
-  </script>
 </body>
 </html>
