--- a/index.html
+++ b/index.html
@@ -3,21 +3,39 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ديمو — تصفيات قلقيلية (عرض داخل الصفحة)</title>
+  <title>ديمو — تصفيات قلقيلية</title>
   <style>
-    body{margin:0;background:#0f1115;color:#fff;font-family:system-ui,-apple-system,"Tajawal",Arial}
-    .top{padding:12px 16px;border-bottom:1px solid #222}
-    .frame{width:100%;height:calc(100vh - 58px);border:0;display:block}
-    a{color:#fe930e}
+    body{font-family: system-ui, -apple-system, "Tajawal", Arial; margin:40px; line-height:1.8}
+    .box{max-width:820px;margin:auto;padding:24px;border:1px solid #333;border-radius:14px}
+    h1{margin:0 0 12px}
+    p{margin:0 0 10px;color:#ddd}
+    body{background:#0f1115;color:#fff}
+    code{background:#141824;padding:2px 6px;border-radius:6px}
   </style>
 </head>
 <body>
-  <div class="top">
-    <span>عرض مباشر للموقع داخل الديمو.</span>
-    <span>— إذا ظهر خطأ/فراغ: الموقع يمنع iframe.</span>
-    <a href="https://tasfiat-qalqilia.ps/ar" style="margin-right:10px">فتح الموقع مباشرة</a>
+  <div class="box">
+    <h1>ديمو نظام تشغيل محادثات — تصفيات قلقيلية</h1>
+    <p>جرّب اكتب مثلًا:</p>
+    <p><code>joma-tojs2401tf</code> أو <code>Skechers</code> أو سؤال شحن.</p>
+    <p>المحادثة تظهر في Chatwoot Inbox لتجربة الوسوم والتصعيد.</p>
   </div>
 
-  <iframe class="frame" src="https://tasfiat-qalqilia.ps/ar" loading="lazy"></iframe>
+  <!-- Chatwoot Widget -->
+  <script>
+    (function(d,t) {
+      var BASE_URL="https://app.chatwoot.com";
+      var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+      g.src=BASE_URL+"/packs/js/sdk.js";
+      g.async = true;
+      s.parentNode.insertBefore(g,s);
+      g.onload=function(){
+        window.chatwootSDK.run({
+          websiteToken: 'y6jKrCLsWXP2HPQk9ASvr7jT',
+          baseUrl: BASE_URL
+        })
+      }
+    })(document,"script");
+  </script>
 </body>
 </html>
