--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
   <title>ديمو — تصفيات قلقيلية</title>
   <style>
     body{font-family: system-ui, -apple-system, "Tajawal", Arial; margin:40px; line-height:1.8}
-    .box{max-width:820px;margin:auto;padding:24px;border:1px solid #333;border-radius:14px}
+.box{
+  max-width:820px;
+  margin:auto;
+  padding:24px;
+  border:1px solid #333;
+  border-radius:14px;
+  background: rgba(15,17,21,0.72);
+  backdrop-filter: blur(6px);
+}
     h1{margin:0 0 12px}
     p{margin:0 0 10px;color:#ddd}
-    body{background:#0f1115;color:#fff}
+body{
+  background: #0f1115 url("assets/bg.png") no-repeat center center fixed;
+  background-size: cover;
+  color:#fff
+}
     code{background:#141824;padding:2px 6px;border-radius:6px}
   </style>
 </head>
