--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ body{
   <div class="box">
     <h1>ديمو نظام تشغيل محادثات — تصفيات قلقيلية</h1>
     <p>جرّب اكتب مثلًا:</p>
-    <p><code>joma-tojs2401tf</code> أو <code>Skechers</code> أو سؤال شحن.</p>
-    <p>المحادثة تظهر في Chatwoot Inbox لتجربة الوسوم والتصعيد.</p>
+    <p><code>عطور رجالي</code> أو <code>سكتشر نمرة 42</code> أو سؤال شحن.</p>
+    <p>المحادثة تظهر في NovaBot Inbox لتجربة الوسوم والتصعيد.</p>
   </div>
 
   <!-- Chatwoot Widget -->
