--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body{
   <div class="box">
     <h1>ديمو نظام تشغيل محادثات — تصفيات قلقيلية</h1>
     <p>جرّب اكتب مثلًا:</p>
-    <p><code>عطور رجالي</code> أو <code>سكتشر نمرة 42</code> أو سؤال شحن.</p>
+    <p><code>اديداس رجالي</code> أو <code>سكتشر نمرة 42</code> أو سؤال شحن.</p>
     <p>المحادثة تظهر في NovaBot Inbox لتجربة الوسوم والتصعيد.</p>
   </div>
 
